--- a/requirements.txt
+++ b/requirements.txt
@@ -9,6 +9,10 @@ html5lib>=1.1
 beautifulsoup4>=4.12.0
 python-dotenv>=1.0.0
 
+# For gold predictor (economic data & ML)
+fredapi>=0.5.0
+scikit-learn>=1.3.0
+
 # For gold tracker notifications (Windows only)
 win10toast>=0.9; sys_platform == 'win32'
 
