--- a/requirements.txt
+++ b/requirements.txt
@@ -12,6 +12,7 @@ python-dotenv>=1.0.0
 # For gold predictor (economic data & ML)
 fredapi>=0.5.0
 scikit-learn>=1.3.0
+imbalanced-learn>=0.11.0
 
 # For gold tracker notifications (Windows only)
 win10toast>=0.9; sys_platform == 'win32'
